hphp/test/slow/object/const/not_on_interface.php.expectf
Fatal error: Classes, interfaces, traits and enums may not be declared `__Const` in %s/not_on_interface.php on line 3
